--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,20 @@
 
 <web-app>
     <servlet>
-        <servlet-name>login</servlet-name>
-        <servlet-class>Login</servlet-class>
+        <servlet-name>RegisterUser</servlet-name>
+        <servlet-class>com.revature.servlets.RegisterUser</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Welcome</servlet-name>
-        <servlet-class>Welcome</servlet-class>
+        <servlet-class>com.revature.servlets.Welcome</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>login</servlet-name>
+        <servlet-name>RegisterUser</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Welcome</servlet-name>
-        <url-pattern>/Welcome</url-pattern>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
 </web-app>
