--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,19 +5,39 @@
 <web-app>
     <servlet>
         <servlet-name>RegisterUser</servlet-name>
-        <servlet-class>com.revature.servlets.RegisterUser</servlet-class>
+        <servlet-class>com.revature.servlets.RegisterUserServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>Welcome</servlet-name>
-        <servlet-class>com.revature.servlets.Welcome</servlet-class>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>com.revature.servlets.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Employee</servlet-name>
+        <servlet-class>com.revature.servlets.EmployeeServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Manager</servlet-name>
+        <servlet-class>com.revature.servlets.ManagerServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterUser</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>Welcome</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>Employee</servlet-name>
+        <url-pattern>/Employee</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Manager</servlet-name>
+        <url-pattern>/Manager</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>login.html</welcome-file>
+    </welcome-file-list>
 
 </web-app>
